# Todolist

./: Dockerfile  First.html  Grammar.py  build.sh  img2txt.py  pyproject.toml  requirements.txt  srcipt.js  style.css
