[tool.poetry]
name = "english-tutor-ai"
version = "0.1.0"
description = ""
authors = ["juanid221297 <139110467+juanid221297@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.dependencies]
gunicorn = "^20.1.0"

